--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@web3modal/solana": "^5.1.8",
+    "axios": "^1.7.7",
     "localforage": "^1.10.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
