--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-spring": "^9.7.4",
+    "react-use-gesture": "^9.1.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
