--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jup-ag/common": "^6.1.0",
+    "@jup-ag/core": "^4.0.0-beta.21",
     "@reduxjs/toolkit": "^2.2.7",
+    "@solana/web3.js": "^1.95.3",
     "@web3modal/solana": "^5.1.8",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -18,9 +21,12 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-spring": "^9.7.4",
+    "react-toastify": "^10.0.5",
     "react-use-gesture": "^9.1.3",
     "styled-components": "^6.1.13"
   },
