--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@web3modal/solana": "^5.1.8",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "localforage": "^1.10.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
