--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@web3modal/solana": "^5.1.8",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "localforage": "^1.10.0",
     "path": "^0.12.7",
