--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.11.8",
     "localforage": "^1.10.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
@@ -28,10 +29,10 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
-    "react-spring": "^9.7.4",
     "react-toastify": "^10.0.5",
-    "react-use-gesture": "^9.1.3",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "swapper": "^1.1.6",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
