--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-spring/web": "^9.7.4",
     "@reduxjs/toolkit": "^2.2.7",
     "@solana/web3.js": "^1.95.3",
+    "@tanstack/react-query": "^5.59.15",
     "@web3modal/solana": "^5.1.8",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -22,6 +23,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.8",
     "localforage": "^1.10.0",
+    "md5": "^2.3.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
