--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@solana/web3.js": "^1.95.3",
     "@tanstack/react-query": "^5.59.15",
+    "@vercel/analytics": "^1.3.1",
     "@web3modal/solana": "^5.1.8",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
